// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderItem Products renders chat styling if provided 1`] = `
<HeaderItem
  product="chat"
>
  <KeyboardFocusContainer>
    <HeaderItem__StyledHeaderItem
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      product="chat"
      tabIndex={0}
    >
      <button
        className="c-chrome__body__header__item c-chrome__body__header__item--logo--chat "
        data-garden-id="chrome.header_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </HeaderItem__StyledHeaderItem>
  </KeyboardFocusContainer>
</HeaderItem>
`;

exports[`HeaderItem Products renders connect styling if provided 1`] = `
<HeaderItem
  product="connect"
>
  <KeyboardFocusContainer>
    <HeaderItem__StyledHeaderItem
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      product="connect"
      tabIndex={0}
    >
      <button
        className="c-chrome__body__header__item c-chrome__body__header__item--logo--connect "
        data-garden-id="chrome.header_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </HeaderItem__StyledHeaderItem>
  </KeyboardFocusContainer>
</HeaderItem>
`;

exports[`HeaderItem Products renders explore styling if provided 1`] = `
<HeaderItem
  product="explore"
>
  <KeyboardFocusContainer>
    <HeaderItem__StyledHeaderItem
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      product="explore"
      tabIndex={0}
    >
      <button
        className="c-chrome__body__header__item c-chrome__body__header__item--logo--explore "
        data-garden-id="chrome.header_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </HeaderItem__StyledHeaderItem>
  </KeyboardFocusContainer>
</HeaderItem>
`;

exports[`HeaderItem Products renders guide styling if provided 1`] = `
<HeaderItem
  product="guide"
>
  <KeyboardFocusContainer>
    <HeaderItem__StyledHeaderItem
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      product="guide"
      tabIndex={0}
    >
      <button
        className="c-chrome__body__header__item c-chrome__body__header__item--logo--guide "
        data-garden-id="chrome.header_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </HeaderItem__StyledHeaderItem>
  </KeyboardFocusContainer>
</HeaderItem>
`;

exports[`HeaderItem Products renders message styling if provided 1`] = `
<HeaderItem
  product="message"
>
  <KeyboardFocusContainer>
    <HeaderItem__StyledHeaderItem
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      product="message"
      tabIndex={0}
    >
      <button
        className="c-chrome__body__header__item c-chrome__body__header__item--logo--message "
        data-garden-id="chrome.header_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </HeaderItem__StyledHeaderItem>
  </KeyboardFocusContainer>
</HeaderItem>
`;

exports[`HeaderItem Products renders support styling if provided 1`] = `
<HeaderItem
  product="support"
>
  <KeyboardFocusContainer>
    <HeaderItem__StyledHeaderItem
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      product="support"
      tabIndex={0}
    >
      <button
        className="c-chrome__body__header__item c-chrome__body__header__item--logo--support "
        data-garden-id="chrome.header_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </HeaderItem__StyledHeaderItem>
  </KeyboardFocusContainer>
</HeaderItem>
`;

exports[`HeaderItem Products renders talk styling if provided 1`] = `
<HeaderItem
  product="talk"
>
  <KeyboardFocusContainer>
    <HeaderItem__StyledHeaderItem
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      product="talk"
      tabIndex={0}
    >
      <button
        className="c-chrome__body__header__item c-chrome__body__header__item--logo--talk "
        data-garden-id="chrome.header_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </HeaderItem__StyledHeaderItem>
  </KeyboardFocusContainer>
</HeaderItem>
`;

exports[`HeaderItem States renders active styling if provided 1`] = `
<HeaderItem
  active={true}
>
  <KeyboardFocusContainer>
    <HeaderItem__StyledHeaderItem
      active={true}
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      tabIndex={0}
    >
      <button
        className="c-chrome__body__header__item is-active "
        data-garden-id="chrome.header_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </HeaderItem__StyledHeaderItem>
  </KeyboardFocusContainer>
</HeaderItem>
`;

exports[`HeaderItem States renders focused styling if provided 1`] = `
<HeaderItem
  focused={true}
>
  <KeyboardFocusContainer>
    <HeaderItem__StyledHeaderItem
      focused={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      tabIndex={0}
    >
      <button
        className="c-chrome__body__header__item is-focused "
        data-garden-id="chrome.header_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </HeaderItem__StyledHeaderItem>
  </KeyboardFocusContainer>
</HeaderItem>
`;

exports[`HeaderItem States renders hovered styling if provided 1`] = `
<HeaderItem
  hovered={true}
>
  <KeyboardFocusContainer>
    <HeaderItem__StyledHeaderItem
      focused={false}
      hovered={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      tabIndex={0}
    >
      <button
        className="c-chrome__body__header__item is-hovered "
        data-garden-id="chrome.header_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </HeaderItem__StyledHeaderItem>
  </KeyboardFocusContainer>
</HeaderItem>
`;

exports[`HeaderItem renders default styling 1`] = `
<HeaderItem>
  <KeyboardFocusContainer>
    <HeaderItem__StyledHeaderItem
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      tabIndex={0}
    >
      <button
        className="c-chrome__body__header__item "
        data-garden-id="chrome.header_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </HeaderItem__StyledHeaderItem>
  </KeyboardFocusContainer>
</HeaderItem>
`;

exports[`HeaderItem renders logo styling if provided 1`] = `
<HeaderItem
  logo={true}
>
  <KeyboardFocusContainer>
    <HeaderItem__StyledHeaderItem
      focused={false}
      logo={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      tabIndex={0}
    >
      <button
        className="c-chrome__body__header__item c-chrome__body__header__item--logo "
        data-garden-id="chrome.header_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </HeaderItem__StyledHeaderItem>
  </KeyboardFocusContainer>
</HeaderItem>
`;

exports[`HeaderItem renders maxX styling if provided 1`] = `
<HeaderItem
  maxX={true}
>
  <KeyboardFocusContainer>
    <HeaderItem__StyledHeaderItem
      focused={false}
      maxX={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      tabIndex={0}
    >
      <button
        className="c-chrome__body__header__item c-chrome__body__header__item--max-x "
        data-garden-id="chrome.header_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </HeaderItem__StyledHeaderItem>
  </KeyboardFocusContainer>
</HeaderItem>
`;

exports[`HeaderItem renders maxY styling if provided 1`] = `
<HeaderItem
  maxY={true}
>
  <KeyboardFocusContainer>
    <HeaderItem__StyledHeaderItem
      focused={false}
      maxY={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      tabIndex={0}
    >
      <button
        className="c-chrome__body__header__item c-chrome__body__header__item--max-y "
        data-garden-id="chrome.header_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </HeaderItem__StyledHeaderItem>
  </KeyboardFocusContainer>
</HeaderItem>
`;

exports[`HeaderItem renders round styling if provided 1`] = `
<HeaderItem
  round={true}
>
  <KeyboardFocusContainer>
    <HeaderItem__StyledHeaderItem
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      round={true}
      tabIndex={0}
    >
      <button
        className="c-chrome__body__header__item c-chrome__body__header__item--round "
        data-garden-id="chrome.header_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </HeaderItem__StyledHeaderItem>
  </KeyboardFocusContainer>
</HeaderItem>
`;
